kubernetes/apps/default/radarr/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: ghcr.io/linuxserver/radarr:4.3.2
          imagePullPolicy: Always
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: movies-nfs
              mountPath: /movies-nfs
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config-pvc
        - name: movies-nfs
          persistentVolumeClaim:
            claimName: movies-nfs-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: sabnzbd-downloads-pvc
