kubernetes/apps/default/radarr/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  ports:
    - port: 7878
      targetPort: 7878
      protocol: TCP
      name: radarr
  selector:
    app: radarr
