kubernetes/apps/default/radarr/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  labels:
    app: radarr-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: radarr.lab.zibbp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
  tls:
    - hosts:
        - radarr.lab.zibbp.net
      secretName: lab-zibbp-net-tls
